# hmm_workspace

./: lapmask_gtec_16.mat
devel/: .catkin  .rosinstall  setup.sh
devel/include/hmm_input/: hmm_input.h
devel/include/hmm_sim/: action_status.h  classifier_output.h  hmm_input.h  reset_command.h  targethit_msg.h  traversability_output.h
devel/include/rosneuro_feedback_wheel/: ControlWheelConfig.h  TrainingWheelConfig.h
devel/include/rosneuro_integrator_exponential/: ExponentialConfig.h
devel/include/rosneuro_msgs/: GetAcquisitionInfo.h  GetAcquisitionInfoRequest.h  GetAcquisitionInfoResponse.h  NeuroDataFloat.h  NeuroDataInfo.h  NeuroDataInt32.h  NeuroDecoder.h  NeuroEvent.h  NeuroFrame.h  NeuroHeader.h  NeuroOutput.h
devel/include/rosneuro_processing/: EogBciConfig.h
devel/lib/hmm_sim/: bar_feedback
devel/lib/pkgconfig/: exponential_smoother.pc  hmm_input.pc  hmm_sim.pc  hmm_simulation.pc  occupancy_grid_python.pc  robot_controller.pc  rosneuro_feedback_wheel.pc  rosneuro_integrator.pc  rosneuro_integrator_exponential.pc  rosneuro_msgs.pc  rosneuro_processing.pc  wheelchair_iaslab_control.pc  wheelchair_iaslab_gazebo.pc  wheelchair_iaslab_init.pc
devel/lib/rosneuro_feedback_wheel/: controlwheel  trainingwheel
devel/lib/rosneuro_integrator/: integrator
devel/lib/rosneuro_processing/: fakeprocessing  smr_positive_output  test_eogbci  test_processing  test_smrbci
src/exponential_smoother/: CMakeLists.txt  package.xml  plugin_exponential_smoother.xml
src/exponential_smoother/include/exponential_smoother/: Exponential_smoother.h
src/exponential_smoother/src/: Exponential_smoother.cpp
src/hmm_sim/: CMakeLists.txt  package.xml
src/hmm_sim/launch/: hmm_sim.launch  neuroviz.launch  only_traversability.launch  parameter.yaml  pipeline.launch  play_bag.launch  robot_sim.launch
src/hmm_sim/msg/: classifier_output.msg  reset_command.msg  targethit_msg.msg  traversability_output.msg
src/hmm_sim/src/: Bar_feedback.cpp  bar_feedback.cpp  data.csv  data_recorder.py  hmm.py  obstacle_spawner.py  static_classifier.py  traversability.py  traversability_NOPE.py
src/hmm_sim/urdf/: horizontal_bar.urdf  left_turn.urdf  right_turn.urdf  stright_turn.urdf  vertical_bar.urdf
src/rosneuro_integrator/: CMakeLists.txt  README.md
src/rosneuro_processing-master/: CMakeLists.txt
(+148 files in other folders)
